<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".view.ui.mainView.ui.fragment.survey_info.pager.validations.cce_survey.CCE_Survey_Activity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/color_primary"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pop_back_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    style="@style/head_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/agriculture" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="14dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/phases"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/phase_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/sub_basin"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/sub_basin_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/district"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/district_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/block"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/block_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/village"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/village_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/component"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/component_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:visibility="gone"
                        android:hint="@string/sub_components"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/sub_components_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/stages"
                        android:visibility="gone"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <EditText
                        android:id="@+id/date_txt"
                        style="@style/AppEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:visibility="gone"
                        android:hint="@string/date_of_sowing_planting" />

                    <EditText
                        android:id="@+id/farmer_txt"
                        style="@style/AppEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/farmer_name" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/gender"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/gender_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/category"
                        app:endIconDrawable="@drawable/drop_down">

                        <AutoCompleteTextView
                            android:id="@+id/category_txt"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <EditText
                        android:id="@+id/survey_txt"
                        style="@style/AppEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/survey_no" />

                    <EditText
                        android:id="@+id/area_txt"
                        style="@style/AppEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/area_ha" />

                    <EditText
                        android:id="@+id/tank_txt"
                        style="@style/AppEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/near_by_tank_name" />


                    <LinearLayout
                        android:id="@+id/take_pic"
                        style="@style/text_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="18dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="1dp"
                            android:src="@drawable/ic_baseline_camera_alt_24" />

                        <TextView
                            style="@style/head_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:gravity="center"
                            android:text="Take photo" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/pic_1"
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="18dp"
                            android:src="@drawable/otp" />

                        <ImageView
                            android:id="@+id/pic_2"
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="18dp"
                            android:src="@drawable/otp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/remarks_txt"
                        style="@style/AppEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/remarks" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="18dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/check_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Consider as a Test" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/submission_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="18dp"
                        android:text="@string/submit"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>


</layout>